Actualizando Readme, Figma, pantalla final

--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,19 @@
       </div>
     </div>
     </main>
-    
+
+    <main align="center" id="bookSold" class="hideAnswer">
+      <div>
+        <h1>¡GRACIAS POR SU COMPRA!</h1>
+        <img id="imaSold" src="images/book2.png" alt="">
+        <br>
+        <button id="btnSold">SEGUIR COMPRANDO</button>
+      </div>
+    </main>
+
+
+
+
     <br>
     <footer align="center" class="footer">
         <h4>Copyright © 2020 letrasenlinea.shfiestas - Todos los derechos reservados.</h4>
